examples/test/testpolicy11044.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11044
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key12: value22
      key25: value32
      key4: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value7
          key28: value44
          key19: value27
      podSelector:
        matchLabels:
          key7: value26
